--- a/biology-course.html
+++ b/biology-course.html
@@ -128,7 +128,7 @@
         <div class="grid">
             <div class="main">
                 <div class="video-box glass reveal">
-                    <img src="https://via.placeholder.com/1280x720.png?text=Biology+Video" alt="الدرس">
+                    <img src="mr.ebrahem.jpg" alt="الدرس">
                     <div class="play-btn"><i class="fas fa-play"></i></div>
                 </div>
                 <div class="video-info glass reveal" style="margin-bottom:30px;">
